--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@
     <string name="text_no_tiene_cuenta">¿No tienes una cuenta?</string>
     <string name="text_crea_cuenta">Crear</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="hint_select_server">Seleccione el servidor</string>
 </resources>
