Se implemento el DataBaseDao en el Login, para guardar el registro de la tabla Server. (Verificar la actualizacion de la informacion en la tabla)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,5 @@
     <string name="text_crea_cuenta">Crear</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="hint_select_server">Seleccione el servidor</string>
+    <string name="title_activity_MainActivityPrincipal">Menu</string>
 </resources>
